--- a/index.html
+++ b/index.html
@@ -31,34 +31,30 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>[Your First and Last Name]</h1>
-            <h1>Preferred Name: [Your Preferred Name]</h1>
+            <h1>Mohammad Navid Qarizadah</h1>
+            <h1>Preferred Name: Navid</h1>
         </header>
 
         <section class="lewis">
-			<h2>Year at Lewis: [Your Years at Lewis]</h2>
-			<h2>Lewis major/minor/concentrations: [Your major/minor/concentrations]</h2>
-			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2>
+            <h2>Year at Lewis: Senior II</h2>
+            <h2>Lewis Major/Minor/Concentrations: Computer Engineering</h2>
+            <h2>Reasons for Pursuing This Degree:</h2>
+            <p>I have always been interested in technology and innovations, which inspired me to pursue this degree.</p>
         </section>
 
-		<section class="course">
+        <section class="course">
             <h2>Reasons for Taking This Course</h2>
-            <p>[Your reasons for taking this course]</p>
+            <p>I want to understand what is expected from a software engineer and learn how to approach problems with the right mindset.</p>
         </section>
 
-		<section class="job">
-            <p>Current/Recent Job</p>
-			<p>[Your job responsibilities]</p>
+        <section class="job">
+            <h2>Current/Recent Job</h2>
+            <p>I am a full-time student while also working at Harvest Food L.L.C., our family business. My role involves managing operations and running the business efficiently.</p>
         </section>		
 
         <section class="hobbies">
             <h2>Hobbies and Special Interests</h2>
-            <p>[Your hobbies or special interests]</p>
-        </section>
-
-        <section class="fun-fact">
-            <h2>Fun Fact</h2>
-            <p>[A fun fact about yourself]</p>
+            <p>My hobbies include sports like horse riding, football, and squash. I also enjoy playing games like FIFA and Assassin’s Creed.</p>
         </section>
     </div>
 </body>
