--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <section class="lewis">
             <h2>Year at AUS: Senior II</h2>
-            <h2>Lewis Major/Minor/Concentrations: Computer Engineering</h2>
+            <h2>AUS Major: Computer Engineering</h2>
             <h2>Reasons for Pursuing This Degree:</h2>
             <p>I have always been interested in technology and innovations, which inspired me to pursue this degree.</p>
         </section>
