--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
             <h2>Hobbies and Special Interests</h2>
             <p>My hobbies include sports like horse riding, football, and squash. I also enjoy playing games like FIFA and Assassin’s Creed.</p>
         </section>
+        
+        <section class="fun fact">
+            <h2>Fun facts about me</h2>
+            <p>I was in the top 2% of fifa championship</p>
+        </section>
     </div>
 </body>
 </html>
